[gd_scene load_steps=7 format=3 uid="uid://dcse86aucs7i"]

[ext_resource type="Script" uid="uid://boa4mpr26if16" path="res://scenes/entities/player.gd" id="1_08t41"]
[ext_resource type="Texture2D" uid="uid://ccyyfncckfuxy" path="res://assets/labubus/Labubu-figure-Image-png-transparent-background.png" id="2_08t41"]
[ext_resource type="PackedScene" uid="uid://cyw4jffxrxk6s" path="res://scenes/weapons/pistol.tscn" id="3_1ie0h"]
[ext_resource type="AudioStream" uid="uid://im6obfaec41b" path="res://assets/sounds/retro-laser-1-236669.mp3" id="4_42nxq"]
[ext_resource type="AudioStream" uid="uid://byduc6l0ydagw" path="res://assets/sounds/gun-full-reload-384507.mp3" id="5_5u6hq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b0kkn"]
size = Vector2(15, 24)

[node name="Player" type="CharacterBody2D"]
collision_mask = 22
script = ExtResource("1_08t41")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3.8147e-06, 0)
rotation = 0.051975
scale = Vector2(0.03, 0.027)
texture = ExtResource("2_08t41")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -2)
shape = SubResource("RectangleShape2D_b0kkn")

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Pistol" parent="." instance=ExtResource("3_1ie0h")]
position = Vector2(8, 5)

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_42nxq")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_5u6hq")

[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="HealTimer" to="." method="_on_heal_timer_timeout"]
